05-dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banking-dashboard
  namespace: banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-dashboard
  template:
    metadata:
      labels:
        app: banking-dashboard
    spec:
      containers:
      - name: dashboard
        # IMPORTANT: Replace r0bert000 with your actual Docker Hub username later
        image: r0bert000/banking-dashboard:v1.0
        
        securityContext:
          runAsUser: 101
          capabilities:
            add: ["NET_BIND_SERVICE"]
        # ------------------------
        ports:
        - containerPort: 80
        
        # Resource requests
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
            
        # Basic Probes for Nginx
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 2
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
