postgres-replU-svcP.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc-primary
  namespace: banking
  labels:
    app: postgres-db
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres-db
    role: primary
