07-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: banking-ingress
#   namespace: banking
#   annotations:
#     # Tell Kubernetes to use the NGINX Ingress Controller
#     kubernetes.io/ingress.class: "nginx"
#     # Security Requirement: Rate limit to 10 requests per second per IP
#     nginx.ingress.kubernetes.io/limit-rps: "10"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: banking.local
#     http:
#       paths:
#       # Route 1: API Traffic
#       - path: /api
#         pathType: Prefix
#         backend:
#           service:
#             name: banking-api-service
#             port:
#               number: 3000
#       # Route 2: Dashboard Traffic (Must be at the bottom)
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: banking-dashboard-service
#             port:
#               number: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: banking.local
    http:
      paths:
      # الحل هنا: مسار مخصص للـ Health يذهب للـ API
      - path: /health
        pathType: Exact
        backend:
          service:
            name: banking-api-service
            port:
              number: 3000
      # أي شيء يبدأ بـ /api يذهب للـ API
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: banking-api-service
            port:
              number: 3000
      # أي شيء آخر يذهب للـ Dashboard
      - path: /
        pathType: Prefix
        backend:
          service:
            name: banking-dashboard-service
            port:
              number: 80
